more italian translation and rebranding after proposal reject by dhammaorg

--- a/compose.yml
+++ b/compose.yml
@@ -12,11 +12,7 @@ services:
       - "3004:3000"
     depends_on:
       - mongodb
-    environment:
-      - NEXT_MONGODB_URI=mongodb://mongodb:27017/samayPolls
-      - NEXT_PUBLIC_ENCRYPTION_KEY=11dfe6084627c69ef02220c60f34f4cd
-      - NEXT_PUBLIC_ENCRYPTION_IV=3a818dc74cb58adc
-      - NEXT_PUBLIC_BASE_URL=https://dhammapoll.neuma.studio
+    env_file: .env
 
   mongodb:
     image: mongo
